<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayoutOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgbtn_main_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/style_imgbtn_meal"
                android:src="@drawable/ic_meal_enabled" />

            <ImageButton
                android:id="@+id/imgbtn_main_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/style_imgbtn_drink"
                android:src="@drawable/ic_drink_enabled" />

            <ImageButton
                android:id="@+id/imgbtn_main_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/style_imgbtn_warning"
                android:src="@drawable/ic_warning_enabled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtvu_main_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/str_im_hungry"
                android:theme="@style/TxtvuTheme"
                android:textAlignment="center">

                <requestFocus />
            </TextView>

            <TextView
                android:id="@+id/txtvu_main_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_im_thirsty"
                android:theme="@style/TxtvuTheme"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtvu_main_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_i_feel_pain"
                android:theme="@style/TxtvuTheme"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutOne">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgbtn_main_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/style_imgbtn_bathroom"
                android:src="@drawable/ic_bathroom_enabled" />

            <ImageButton
                android:id="@+id/imgbtn_main_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/style_imgbtn_medicine"
                android:src="@drawable/ic_medicine_enabled" />

            <ImageButton
                android:id="@+id/imgbtn_main_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/style_imgbtn_ambulance"
                android:src="@drawable/ic_ambulance_enabled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtvu_main_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_i_need_restroom"
                android:theme="@style/TxtvuTheme"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtvu_main_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_need_medicine"
                android:theme="@style/TxtvuTheme"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtvu_main_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_bad_condition"
                android:theme="@style/TxtvuTheme"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutThree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutTwo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgbtn_main_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/style_imgbtn_yes"
                android:src="@drawable/ic_yes_enabled" />

            <ImageButton
                android:id="@+id/imgbtn_main_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/style_imgbtn_no"
                android:src="@drawable/ic_no_enabled" />

            <ImageButton
                android:id="@+id/imgbtn_main_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/settingsicon"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtvu_main_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_yes"
                android:theme="@style/TxtvuTheme"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtvu_main_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_no"
                android:theme="@style/TxtvuTheme"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtvu_main_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_stable_condition"
                android:theme="@style/TxtvuTheme"
                android:textAlignment="center"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutThree">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#efefef"
            android:layout_marginTop="5dp"
            tools:context=".MainActivity">


          <!--  <ScrollView
                android:id="@+id/scroller"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="60dp"
                android:background="#efefef"> -->

            <ListView
                android:id="@+id/list_conversation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="60dp"
                android:background="#efefef"
                android:divider="#efefef"
                android:stackFromBottom="true"
                android:dividerHeight="5dp"
                android:transcriptMode="alwaysScroll"
                android:padding="10dp" />
          <!--  </ScrollView> -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <EditText
                    android:id="@+id/ed_enter_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="100dp" />

                <Button
                    android:id="@+id/btn_send_msg"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/str_label_btn_send"
                    android:theme="@style/style_btn"/>
            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
